--- a/views/index.hbs
+++ b/views/index.hbs
@@ -313,7 +313,7 @@
 
             <div class=" card text-white news-col">
                 <div class="news-container">
-                    <img src="icon3.png" class="card-img" alt="...">
+                    <img src="images/icon3.png" class="card-img" alt="...">
                 </div>
                 <div class="card-img-overlay card-content">
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
@@ -325,7 +325,7 @@
 
             <div class=" card text-white news-col">
                 <div class="news-container">
-                    <img src="icon3.png" class="card-img" alt="...">
+                    <img src="images/icon3.png" class="card-img" alt="...">
                 </div>
                 <div class="card-img-overlay card-content">
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
@@ -337,7 +337,7 @@
 
             <div class=" card text-white news-col">
                 <div class="news-container">
-                    <img src="icon3.png" class="card-img" alt="...">
+                    <img src="images/icon3.png" class="card-img" alt="...">
                 </div>
                 <div class="card-img-overlay card-content">
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
@@ -349,7 +349,7 @@
 
             <div class=" card text-white news-col">
                 <div class="news-container">
-                    <img src="icon3.png" class="card-img" alt="...">
+                    <img src="images/icon3.png" class="card-img" alt="...">
                 </div>
                 <div class="card-img-overlay card-content">
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
@@ -361,7 +361,7 @@
 
             <div class=" card text-white news-col">
                 <div class="news-container">
-                    <img src="icon3.png" class="card-img" alt="...">
+                    <img src="images/icon3.png" class="card-img" alt="...">
                 </div>
                 <div class="card-img-overlay card-content">
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
@@ -373,18 +373,24 @@
 
             <div class=" card text-white news-col">
                 <div class="news-container">
-                    <img src="icon3.png" class="card-img" alt="...">
+                    <img src="images/icon3.png" class="card-img" alt="...">
                 </div>
                 <div class="card-img-overlay card-content">
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                         additional
                         content. This content is a little bit longer.</p>
-                    <p class="news-link"> <a href="#" target="_blank"> Read more</a> </p>
+                    <p class="news-link"> <a href={{articles}} target="_blank"> Read more</a> </p>
                 </div>
             </div>
 
         </div>
     </div>
+
+
+
+{{!-- {{each articles}}
+    <li>{{this.article.url}}</li>
+{{/each}} --}}
 
     <!-- Footer Section -->
     <footer class="d-flex justify-content-center mt-3 py-3">
