scroll top section completed.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -80,7 +80,7 @@
     </div>
 
     <!-- Weather Data(color-container) -->
-    <div class="container  mt-3  text-light color-container">
+    <section class="container  mt-3  text-light color-container">
 
         <!-- Location -->
         <div class="row p-3">
@@ -140,10 +140,13 @@
                 <span id="dew-point">6&deg;</span>
             </div>
         </div>
-    </div>
+    </section>
+
+    <!-- Scroll-Up Button -->
+    <i id="scroll-top" class="fas fa-chevron-circle-up"></i>
 
     <!-- Weekly-forecast -->
-    <div class="sub-category-container">
+    <section class="sub-category-container">
         <div class="sub-category-name" id="weekly-forecast"> <strong> 7 DAYS FORECAST</strong></div>
         <div class="week-list" id="weekly-set">
 
@@ -304,10 +307,10 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
     <!-- NEWS API-->
-    <div class="sub-category-container">
+    <section class="sub-category-container">
         <div class="sub-category-name" id="news"> <strong> TRENDING NEWS</strong></div>
 
         <div class="news-list">
@@ -326,7 +329,7 @@
             </div>
             {{/each}}
         </div>
-    </div>
+    </section>
 
     <!-- Footer Section -->
     <footer class="d-flex justify-content-center mt-3 py-3">
