--- a/public/style/weather.css
+++ b/public/style/weather.css
@@ -55,6 +55,19 @@
    height: 8rem;
  }
 
+ /* Scroll-Up Buuton */
+#scroll-top {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 3rem;
+  color:  white;
+  cursor: pointer;
+  margin: 0;
+}
+
  /* .sub-category-name {
    color: white;
    margin: 2rem 0 2rem 6.5rem;
